Fix bug 132560 (When changing identity, the transport is then reset to the wrong one)

I've got this patch on my harddisk for a long time. The patch should also fix a few other transport related bugs.

BUG:132560

svn path=/branches/KDE/3.5/kdepim/; revision=596514